# telegram_handler

./: pyproject.toml  rebuild.sh
telegram_handler/: __init__.py  buffer.py  consts.py  handler.py
tests/: test_handler.py
