[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-handler"
dependencies = [
  'requests ~= 2.31.0',
  'retry ~= 0.9.2',
  'python-telegram-bot[rate-limiter]==20.1'
]

version = "1.4.6"
authors = [
  {name="Guyshe,Dmitrii"},
]
description = "Small package for working with config files"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KoryakovDmitry/telegram_handler.git"
